--- a/ThymeLeaf/springbootThymeLeaf/src/main/resources/templates/personas/lista.html
+++ b/ThymeLeaf/springbootThymeLeaf/src/main/resources/templates/personas/lista.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link th:href="@{../webjars/bootstrap/css/bootstrap.css}" rel="stylesheet">
+    <script th:src="@{../webjars/bootstrap/js/bootstrap.min.js}"></script>
     <title>lista Personas</title>
 </head>
 
 <body>
     <table>
         <!-- th:each es cmo un for apra recorrer el modelo que se carga desde el controlador java, el objeto es lista -->
-        <tr th:each="persona:${lista}">
+        <tr th:each="persona:${lista}"class="container-fluid">
             <td th:text="${persona.nombre}"></td>
             <td th:text="${persona.apellidos}"></td>
             <td th:text="${persona.edad}"></td>
